USAGOV-1543-fix-social-links-alignment: Misalignment, fixed

--- a/web/themes/custom/usagov/sass/_footer.scss
+++ b/web/themes/custom/usagov/sass/_footer.scss
@@ -183,10 +183,7 @@
 
 .usa-footer__contact-heading {
   margin-bottom: 0.5rem;
-
-  @media (max-width: 30em) {
-    text-align: left;
-  }
+  text-align: left;
 }
 
 .usa-footer__contact-heading.es {
@@ -240,8 +237,7 @@
   }
 }
 
-/* ---- Identifier ----
-*/
+/* ---- Identifier ---- */
 
 .usa-identifier {
   background-color: color("blue-80v");
